refactor of cgi and validation of cgi added

--- a/example_files/post_empty.html
+++ b/example_files/post_empty.html
@@ -14,7 +14,7 @@
     <button type="submit">Send Request</button>
   </form>
   
-  <h2>Send Completely Empty POST</h2>
+  <h2>Send Completely Empty GET</h2>
   <form action="http://localhost:8080/example_files/hello.py" method="GET">
     <button type="submit">Send Empty POST</button>
   </form>
