fix: cgi forbidden ext, cgi response and directory check in defaultIndex

--- a/example_files/post_empty.html
+++ b/example_files/post_empty.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Send Empty POST Request</h1>
-  <form action="http://localhost:8080/example_files/hello.py" method="POST">
+  <form action="http://localhost:8080/hello.py" method="POST">
     <label for="name">Name (optional):</label>
     <input type="text" id="name" name="name">
     <br><br>
