--- a/example_files/post_empty.html
+++ b/example_files/post_empty.html
@@ -1,46 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>File Operations</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #87CEEB;
+            margin: 0;
+            padding: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .form-container {
+            background-color:  rgb(215, 155, 15);
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 80%;
+            max-width: 600px;
+        }
+
+        h1 {
+            color: white;
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-size: 16px;
+            margin: 10px 0;
+            display: block;
+            color: #333;
+        }
+
+        input[type="text"], input[type="email"], select, input[type="submit"] {
+            padding: 10px;
+            width: 100%;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        input[type="submit"] {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .inline-group {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .inline-group label {
+            flex: 1;
+            text-align: left;
+        }
+    </style>
 </head>
+
 <body>
-  <h1>Send Empty POST Request</h1>
-  <form action="http://localhost:8080/hello.py" method="POST">
-    <label for="name">Name (optional):</label>
-    <input type="text" id="name" name="name">
-    <br><br>
-    <button type="submit">Send Request</button>
-  </form>
-  
-  <h2>Send Completely Empty GET</h2>
-  <form action="http://localhost:8080/example_files/hello.py" method="GET">
-    <button type="submit">Send Empty POST</button>
-  </form>
+    <div class="form-container">
+        <h1>Form for CGI and Personal Details</h1>
+        <form action="#" method="POST">
+            <!-- Method Selection -->
+            <div class="form-group">
+                <label for="method">Select HTTP Method:</label>
+                <select id="method" name="method">
+                    <option value="GET">GET</option>
+                    <option value="POST">POST</option>
+                </select>
+            </div>
 
-  <h2>Delete File</h2>
-  <form onsubmit="event.preventDefault(); sendDeleteRequest();">
-    <label for="filename">Filename:</label>
-    <input type="text" id="filename" name="filename" required>
-    <button type="submit">Delete File</button>
-  </form>
+            <!-- CGI Type -->
+            <div class="form-group">
+                <label for="cgi">Select CGI Type:</label>
+                <select id="cgi" name="cgi">
+                    <option value="ask_cgi">Ask CGI</option>
+                    <option value="upload_cgi">Upload CGI</option>
+                    <option value="delete_cgi">Delete CGI</option>
+                </select>
+            </div>
 
-  <script>
-    function sendDeleteRequest() {
-      const filename = document.getElementById('filename').value;
-      if (!filename) {
-        alert('Please enter a filename to delete.');
-        return;
-      }
-      
-      fetch(`http://localhost:8080/example_files/${filename}`, {
-        method: 'DELETE'
-      })
-      .then(response => response.text())
-      .then(data => alert('Response: ' + data))
-      .catch(error => console.error('Error:', error));
-    }
-  </script>
+            <!-- Intranet Login (Username) -->
+            <div class="form-group">
+                <label for="login">Intranet Login (Username):</label>
+                <input type="text" id="login" name="login" placeholder="Enter your intranet login" required>
+            </div>
+
+            <!-- First Name -->
+            <div class="form-group">
+                <label for="firstname">First Name:</label>
+                <input type="text" id="firstname" name="firstname" placeholder="Enter your first name" required>
+            </div>
+
+            <!-- Email -->
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            </div>
+
+            <!-- Submit Button -->
+            <div class="form-group">
+                <input type="submit" value="Submit">
+            </div>
+        </form>
+    </div>
 </body>
+
 </html>
